--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.0.2",
         "anhskohbo/no-captcha": "^3.4",
+        "charlesassets/laravel-perfectmoney": "^1.0",
         "cloudinary-labs/cloudinary-laravel": "^2.0",
         "denpa/laravel-bitcoinrpc": "^1.3",
         "doctrine/dbal": "^3.5",
@@ -18,7 +19,8 @@
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.0",
         "nesbot/carbon": "^2.62",
-        "realrashid/sweet-alert": "^5.1"
+        "realrashid/sweet-alert": "^5.1",
+        "spatie/laravel-permission": "^5.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
